# load_ztfdr_for_tape

./: .copier-answers.yml  README.md  index.json  info.json  pyproject.toml  regressions.json  regressions.xml
.github/workflows/: testing-and-coverage.yml
_results/: benchmarks.json
_results/gh-runner/: 2635ec1c-virtualenv-py3.10-Cython-build-packaging.json  2cf20d23-virtualenv-py3.10-Cython-build-packaging.json  7fec0f81-virtualenv-py3.10-Cython-build-packaging.json  8605a785-virtualenv-py3.10-Cython-build-packaging.json  86cdda18-virtualenv-py3.10-Cython-build-packaging.json  8bbd3b3e-virtualenv-py3.10-Cython-build-packaging.json  98f2aa00-virtualenv-py3.10-Cython-build-packaging.json  9acf7c83-virtualenv-py3.10-Cython-build-packaging.json  eaf2d0a7-virtualenv-py3.10-Cython-build-packaging.json  f11265f7-virtualenv-py3.10-Cython-build-packaging.json  fca3c62d-virtualenv-py3.10-Cython-build-packaging.json
benchmarks/: asv.conf.json  benchmarks.py
docs/: conf.py  index.rst
graphs/summary/: benchmarks.mem_list.json  benchmarks.time_computation.json
src/load_ztfdr_for_tape/: __init__.py  bands.py  columns.py  dask.py  filepath.py  oid.py  pandas.py
tests/: conftest.py  test_fixture_paths.py
tests/data/: README.md
tests/data/lc_dr19/: .gitattributes
tests/data/lc_dr19/0/field000202/: ztf_000202_zg_c12_q1_dr19.parquet
tests/data/lc_dr19/1/field001518/: ztf_001518_zg_c01_q2_dr19.parquet  ztf_001518_zr_c01_q2_dr19.parquet
tests/load_ztfdr_for_tape/: test_bands.py  test_columns.py  test_dask.py  test_filepath.py  test_oid.py  test_pandas.py
